<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="104dp"
        android:paddingBottom="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenMvvmDemo"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_open_mvvm_demo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenBrvahDemo"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/demo_open_brvah_demo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenNetworkDemo"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/demo_open_network_demo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenCommandSettings"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/demo_open_command_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenCommunicationDemo"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/demo_open_communication_demo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenLogSettings"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/demo_open_log_settings" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
